--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,12 +1,33 @@
 version: '3.3'
+
+volumes:
+  postgres_data:
+  static_value:
+  media_value:
+
 services:
 
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    image: 64286/foodgram_frontend:v1
     volumes:
       - ../frontend/:/app/result_build/
+  db:
+    image: postgres:12.4
+    restart: always
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    env_file:
+      - ./.env
+  web:
+    image: 64286/foodgram_backend:v1
+    restart: always
+    volumes:
+      - static_value:/code/backend_static/
+      - media_value:/code/backend_media/
+    depends_on:
+      - db
+    env_file:
+      - ./.env
   nginx:
     image: nginx:1.19.3
     ports:
@@ -16,3 +37,8 @@ services:
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
       - ../docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
+    depends_on:
+      - frontend
+      - web
