First commit: Upload to review

--- a/backend/setup.conf
+++ b/backend/setup.conf
@@ -1,21 +1,12 @@
 [flake8]
 ignore =
-    E722,
     W503,
-    F811,
-    F841,
-    R504,
-    I001,
-    I005,
-    I004,
-    I003,
-    R504,
-    E128,
+    F811
 exclude =
     tests/,
     */migrations/,
     venv/,
     env/
 per-file-ignores =
-    */settings.py:E501
+    */foodgram/settings.py:E501
 max-complexity = 10
