--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,11 +15,9 @@ jobs:
 
     - name: Install dependencies
       run: |
-        cd backend
-        python -m pip install --upgrade pip
-        pip install flake8 pep8-naming flake8-broken-line
-        pip install -r requirements.txt
-
+        python -m pip install --upgrade pip 
+        pip install flake8
+        pip install -r backend/requirements.txt
     - name: Test with flake8
       run: |
         python -m flake8
