--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,6 +19,10 @@ djoser==2.1.0
 drf-spectacular==0.18.0
 flake8==3.9.2
 flake8-broken-line==0.3.0
+flake8-isort==4.0.0
+flake8-plugin-utils==1.3.2
+flake8-polyfill==1.0.2
+flake8-return==1.1.3
 gunicorn==20.1.0
 idna==3.2
 inflection==0.5.1
@@ -31,7 +35,8 @@ mccabe==0.6.1
 oauthlib==3.1.1
 pep8-naming==0.12.1
 Pillow==8.3.1
-psycopg2-binary==2.9.1
+pkg_resources==0.0.0
+psycopg2-binary==2.8.6
 pycodestyle==2.7.0
 pycparser==2.20
 pyflakes==2.3.1
@@ -42,6 +47,7 @@ pytz==2021.1
 PyYAML==5.4.1
 requests==2.26.0
 requests-oauthlib==1.3.0
+sentry-sdk==1.3.1
 six==1.16.0
 social-auth-app-django==4.0.0
 social-auth-core==4.1.0
