--- a/requirements.txt
+++ b/requirements.txt
@@ -35,7 +35,7 @@ mccabe==0.6.1
 oauthlib==3.1.1
 pep8-naming==0.12.1
 Pillow==8.3.1
-psycopg2-binary==2.9.1
+psycopg2-binary==2.8.6
 pycodestyle==2.7.0
 pycparser==2.20
 pyflakes==2.3.1
@@ -46,6 +46,7 @@ pytz==2021.1
 PyYAML==5.4.1
 requests==2.26.0
 requests-oauthlib==1.3.0
+sentry-sdk==1.3.1
 six==1.16.0
 social-auth-app-django==4.0.0
 social-auth-core==4.1.0
